--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "dakeai",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
+    "@formily/antd": "^2.0.0-rc.11",
+    "@formily/core": "^2.0.0-rc.11",
+    "@formily/react": "^2.0.0-rc.11",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,6 +14,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "antd": "^4.16.13",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -18,7 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set PUBLIC_URL=./ && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
